# ai-sync

./: .ai-sync.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  README.md  justfile  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  release.yml
config/client-settings/: settings.example.yaml
doc/: AUTH_MATRIX.md  OAUTH_REPORT.md
documentation/: SKILL_GUIDELINES.md
scripts/: .client-versions.json  ai-sync-reset.sh  guard-commit.sh  migrate-to-single-yaml.py  release_checks.sh  requirements.txt  rtk-rewrite.cursor.sh
scripts/client-sync/: README.md  helpers.py  pyproject.toml  pyrightconfig.json  requirements.txt  sync_ai_configs.py
scripts/client-sync/clients/: __init__.py  base.py  codex.py  cursor.py  gemini.py
scripts/client-sync/tests/: __init__.py  test_helpers.py
tests/: conftest.py  test_artifacts.py  test_binary_dependencies.py  test_cli.py  test_clients_full.py  test_clients_rendering.py  test_config_store.py  test_display_interactive.py  test_env_config.py  test_env_loader.py  test_git_safety.py  test_git_source_fetcher_service.py  test_gitignore.py  test_helpers.py  test_manifest_loader.py  test_mcp_sync.py  test_op_inject.py  test_path_ops.py  test_planning.py  test_precedence.py  test_project.py  test_project_artifact_service.py  test_repo_store.py  test_requirements_loader.py  test_source_catalog_service.py  test_sync_runner.py  test_track_write.py  test_uninstall.py  test_version_checks.py  test_version_checks_extra.py  test_web_api.py
ui/: package-lock.json  package.json  vite.config.ts
(+150 files in other folders)
