[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sync-ai-configs"
version = "0.1.0"
description = "Sync AI configs (agents, skills, MCP servers, client config) to Codex, Cursor, Gemini."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
sync-ai-configs = "sync_ai_configs:main"

[tool.setuptools]
py-modules = ["sync_ai_configs", "helpers"]
packages = ["clients"]
